# StatForge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  clear.sh  run.sh  run_benchmarks.sh  run_benchmarks_perf.sh  run_examples.sh  run_tests.sh
doc/: cell_dependencies_example.drawio  design_document.md  dsl_draft.txt  notes_previous_version.txt  roadmap.txt  tree_structure.txt
example/: CMakeLists.txt  main.cpp
example/c/: example.c
example/cpp/: example.cpp
example/golang/: example.go
example/lua/: example.lua
src/: CMakeLists.txt  core.cpp  core.hpp
src/api/: c.cpp  c.h  c.hpp  cpp.cpp  cpp.hpp
src/common/: definitions.hpp  error.c  error.cpp  error.h
src/common/internal/: definitions.hpp  error.hpp
src/core/: context.hpp  engine.cpp  engine.hpp
src/debug/: puml.cpp  puml.hpp  puml_debug.cpp
src/dsl/: ast.cpp  ast.hpp  error.hpp  evaluator.cpp  evaluator.hpp  grammar.cpp  grammar.hpp  parser.cpp  parser.hpp  tokenizer.cpp  tokenizer.hpp
src/error/: error.h
src/error/internal/: error.hpp
src/runtime/: context.hpp  engine.cpp  engine.hpp
src/spreadsheet/: cell.cpp  cell.hpp  compiler.cpp  compiler.hpp  evaluator.cpp  evaluator.hpp  executor.cpp  executor.hpp  graph.cpp  graph.hpp  spreadsheet.cpp  spreadsheet.hpp
src/stat_kernel/: cell.hpp  compiler.cpp  compiler.hpp  executor.cpp  executor.hpp  graph.cpp  graph.hpp  node.hpp  stat_kernel.cpp  stat_kernel.hpp
src/state/: rule.cpp  rule.hpp  rule_engine.cpp  rule_engine.hpp
src/types/: collection_operation.h  definitions.hpp
tests/: CMakeLists.txt  main.cpp  test_util.hpp
tests/benchmarks/: balanced_binary_tree.cpp  chains.cpp
tests/dsl/: evaluator.cpp  parser.cpp  tokenizer.cpp
tests/rules/: action_draft.cpp
tests/spreadsheet/: action_draft.cpp  cell_creation.cpp
tests/stat_kernel/: cell_creation.cpp  node_creation.cpp  reset.cpp
